# smart-wearable-device

./: COMPONENTS.md  README.md
backend-api/: .gitignore  FEATURES.md  README.md  database.py  main.py  models.py  pyproject.toml  schemas.py
backend-api/routes/: analytics.py  auth.py  export.py  health_platforms.py  ratings.py  vitals.py  websocket.py
backend-api/services/: cnn_activity_model.py  lstm_stress_model.py  ml_service.py  rating_service.py
design/: design.kicad_prl  design.kicad_pro  design.kicad_sch
health-firmware/: README.md  platformio.ini
health-firmware/include/: MAX30105.h  MAX30205.h  config.h  heartRate.h
health-firmware/src/: main.cpp
health_app/: README.md  pubspec.yaml
health_app/lib/: main.dart
health_app/lib/config/: api_config.dart
health_app/lib/models/: vitals_data.dart  vitals_model.dart
health_app/lib/screens/: alerts_screen.dart  analytics_screen.dart  breathing_exercise_screen.dart  dashboard_screen.dart  device_scan_screen.dart  home_screen.dart  settings_screen.dart
health_app/lib/services/: api_service.dart  ble_service.dart  database_service.dart  health_api_service.dart  health_calculator.dart
health_app/lib/utils/: health_report_exporter.dart
health_app/lib/widgets/: chart_widget.dart  collapsible_alerts.dart  derived_metrics_widgets.dart  monitoring_state_widgets.dart  vital_history_modal.dart  vitals_card.dart
health_app/linux/runner/: my_application.cc
health_circuit/: health_app.kicad_prl  health_app.kicad_pro  health_app.kicad_sch  health_app.plt  report.txt
(+1 files in other folders)
